--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Remote Assignment</h1>
+        <h1>Nina's Remote Assignment</h1>
         <ul>
             <li><a href="https://ninanaiwunyao.github.io/remote-assignments/week-1/" target="_blank">Week 1</a></li>
             <li><a href="https://ninanaiwunyao.github.io/remote-assignments/week-2/" target="_blank">Week 2</a></li>
