--- a/week-2/index.html
+++ b/week-2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment-4</title>
-    <link rel="stylesheet" href="assignment-4.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar">
@@ -49,6 +49,6 @@
             <div class="box">Content Box 8</div>
         </div>
     </main>
-    <script src="assignment-4.js"></script>
+    <script src="assignment.js"></script>
 </body>
 </html>
