--- a/week-3/public/index.html
+++ b/week-3/public/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Accumulator</h1>
             <label for="numInput">Please input a positive number:</label>
-            <input type="number" id="numInput">
+            <input type="text" id="numInput">
             <button id="calculateButton">calculate</button>
             <div id="result"></div>
     </div>
