--- a/index.html
+++ b/index.html
@@ -1,57 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment Cover Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .container {
-            background-color: #eec5c5;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-        h1 {
-            margin-top: 0;
-            color: #d88383;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            margin: 10px 0;
-        }
-        a {
-            text-decoration: none;
-            color: #f4e8bf;
-            font-weight: bold;
-        }
-        a:hover {
-            color: #c7d9ed;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Nina's Remote Assignment</h1>
-        <ul>
-            <li><a href="https://ninanaiwunyao.github.io/remote-assignments/week-1/" target="_blank">Week 1</a></li>
-            <li><a href="https://ninanaiwunyao.github.io/remote-assignments/week-2/" target="_blank">Week 2</a></li>
-            <li><a href="https://ninanaiwunyao.github.io/remote-assignments/week-3/" target="_blank">Week 3</a></li>
-            <li><a href="https://ninanaiwunyao.github.io/remote-assignments/week-4/" target="_blank">Week 4</a></li>
-        </ul>
-    </div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/remote-assignments/week-4/assignment-3/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/remote-assignments/week-4/assignment-3/logo192.png"/><link rel="manifest" href="/remote-assignments/week-4/assignment-3/manifest.json"/><title>React App</title><script defer="defer" src="/remote-assignments/week-4/assignment-3/static/js/main.0bffd0b7.js"></script><link href="/remote-assignments/week-4/assignment-3/static/css/main.510ef8b1.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
