--- a/week-4/assignment-4/index.html
+++ b/week-4/assignment-4/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>assignment-1&2</title>
+    <title>Assignment-4</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="result"></div>
+    <div class="btnContainer">
+        <button id="moreButton">More</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
